--- a/.env
+++ b/.env
@@ -18,10 +18,10 @@ DEFAULT_REQUEST_CACHING_VALUE=false
 
 #BENCHMARK_MODE=true
 
-FORWARD_CONFIG=[{"base_url":"https://api.openai.com","route":"/","type":"openai"}]
+FORWARD_CONFIG=[{"base_url":"https://api.shuttleai.com","route":"/","type":"openai"}]
 
-#LEVEL_MODELS={"1": ["gpt-4"], "2": ["gpt-3.5-turbo"]}
-#OPENAI_API_KEY={"sk-xxx": [0], "sk-xxx": [1], "sk-xxx": [1,2]}
+#LEVEL_MODELS={"1": ["gpt-4-turbo-preview"], "2": ["claude-3-opus"]}
+#OPENAI_API_KEY={"shuttle-qzqmsqlcrjhnkdwoshpb": [0], "shuttle-qzqmsqlcrjhnkdwoshpb": [1], "shuttle-qzqmsqlcrjhnkdwoshpb": [1,2]}
 #FORWARD_KEY={"fk-0": 0, "fk-1": 1, "fk-2": 2}
 
 # `REQ_RATE_LIMIT`: i.e., Request rate limit for specified routes, user specific
